# OPAL-rust

./: .embed.toml  .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  STM32L4x3-qspi.svd  TODO.md  build.rs  flash-release.gdb  flash.gdb  gen-callgraph.py  gen_openocd-rtt0_cfg.py  memory.x  openocd-rtt0.cfg  openocd-rtt0.cfg.in  openocd.cfg  requests_patterns.md  rtt_log.sh  Тестирование потребления самописца.xlsx
.cargo/: config.toml
.gitea/workflows/: ci.yaml
heatshrink-rust/: Cargo.toml  build.rs
heatshrink-rust/src/: data_provider.rs  decoder.rs  encoder.rs  lib.rs
heatshrink-rust/src/bindings/: bindings-decoder.rs
lib/emfat/: Cargo.toml  build.rs
lib/emfat/emfat-src/: emfat.c  emfat.h
lib/emfat/src/: lib.rs
lib/emfat/src/bindings/: emfat-bindings.rs
lib/flash-settings.rs/: Cargo.toml
lib/flash-settings.rs/src/: lib.rs
lib/heatshrink-rust/: Cargo.toml
lib/heatshrink-rust/src/bindings/: bindings-encoder.rs
lib/my-proc-macro/: Cargo.toml
lib/my-proc-macro/src/: lib.rs
lib/nanopb.rs/: README.md
lib/nanopb.rs/nanopb-rs/: Cargo.toml  build.rs
lib/nanopb.rs/nanopb-rs-generator/: Cargo.toml  README.md
lib/nanopb.rs/nanopb-rs-generator/src/: lib.rs
lib/nanopb.rs/nanopb-rs/src/: common.rs  dyn_fields.rs  lib.rs  pb.rs  pb_decode.rs  pb_encode.rs
lib/nanopb.rs/nanopb-rs/src/bindings/: pb_decode.rs  pb_encode.rs
lib/qspi_stm32l4x3/: Cargo.toml
lib/qspi_stm32l4x3/src/: lib.rs
lib/qspi_stm32l4x3/src/hal/: enable.rs  mod.rs  qspi.rs  rcc.rs
lib/qspi_stm32l4x3/src/stm32l4x3/: field_reader.rs  generics.rs  mod.rs  quadspi.rs  w.rs
lib/qspi_stm32l4x3/src/stm32l4x3/quadspi/: abr.rs  ar.rs  ccr.rs  cr.rs  dcr.rs  dlr.rs  dr.rs  fcr.rs  lptr.rs  pir.rs  psmar.rs  psmkr.rs  sr.rs
old/: build.rs
old/src/: config.rs  master_value_stat.rs
old/src/configTemplate/: FreeRTOSConfig.h
old/src/control/: xy2_100.rs
old/src/control/laser/: laser_pa0_7_pa13_15_tom4_tim1.rs
old/src/gcode/: gcode.rs  mod.rs
old/src/support/: debug_mcu.rs  defmt_string.rs  format_float_simple.rs  interrupt_controller_f103.rs  len_in_u64_aligned.rs  log_anywhere.rs  mod.rs  new_global_mutex.rs  parallel_input_bus.rs  ticks_format.rs  timer_period.rs
old/src/threads/: monitor.rs
old/src/time_base/: mod.rs
old/src/time_base/hw_master/: mod.rs
old/src/workmodes/: common.rs  high_performance_mode.rs
src/: config.rs  config_pins.rs  main.rs  master_value_stat.rs
src/config/: FreeRTOSConfig.h
src/configDebug/: FreeRTOSConfig.h
src/configRelease/: FreeRTOSConfig.h
src/configTemplate/: FreeRTOSConfig.h
src/control/: laser.rs  mod.rs  xy2_100.rs
src/control/laser/: laser_PA0_7_PA13_15_TIM4_TIM1.rs  laser_pa0_7_pa13_15_tom4_tim1.rs
src/control/xy2_100/: tim2_GPIOB_3456.rs  tim2_gpiob_3456.rs
src/gcode/: gcode.rs  gcode_server.rs  mod.rs  motion_mgr.rs
src/main_data_storage/: cpu_flash_diff_writer.rs  data_page.rs  diff_writer.rs  header_printer.rs  internal_storage.rs  mod.rs  qspi_diff_writer.rs  qspi_storage.rs  storage.rs  test_writer.rs  write_controller.rs
src/main_data_storage/qspi_diff_writer/: identification.rs  opcode.rs  qspi_driver.rs  status_flags.rs
src/main_data_storage/qspi_storage/: flash_config.rs  identification.rs  qspi_driver.rs
src/main_data_storage/qspi_storage/flash_config/: MT25QU01GBBB8E12.rs
src/protobuf/: ProtobufDevice_0000E006.option  ProtobufDevice_0000E006.proto  change_password.rs  device_info.rs  encode_md_message.rs  fields.rs  md.rs  message_body.rs  messages.rs  mod.rs  monitoring_over_conditions.rs  new_response.rs  output.rs  process_requiest.rs  process_settings.rs  reader.rs  sizable.rs
src/sensors/: mod.rs
src/sensors/analog/: mod.rs
src/sensors/freqmeter/: f_ch_processor.rs  freqmeter_controller.rs  freqmeter_dma.rs  master_counter.rs  mod.rs
src/sensors/freqmeter/hw_in_counters/: in_counters_l433.rs  mod.rs
src/sensors/freqmeter/hw_master/: master_l433.rs  mod.rs
src/settings/: app_settings.rs  flash_rw_polcy.rs  mod.rs  store_async.rs
src/support/: clocking.rs  debug_mcu.rs  defmt_string.rs  filter.rs  format_c_str.rs  format_float_simple.rs  free_rtos_error_ext.rs  freertos_hooks.rs  hex_slice.rs  interrupt_controller.rs  interrupt_controller_l433.rs  led.rs  len_in_u64_aligned.rs  logging.rs  map.rs  mast_yield.rs  mod.rs  new_freertos_timer.rs  new_global_mutex.rs  parallel_input_bus.rs  parallel_output_bus.rs  usb_connection_checker.rs  vusb_monitor.rs
src/threads/: free_rtos_delay.rs  gcode_server.rs  mod.rs  monitor.rs  motion.rs  protobuf_server.rs  sensor_processor.rs  storage.rs  stream.rs  usb_periph.rs  usbd.rs  vfs.rs
src/threads/vfs/: callbacks.rs  static_data.rs
src/time_base/: master_counter.rs
src/time_base/hw_master/: master_f103.rs  master_l433.rs
src/workmodes/: common.rs  high_performance_mode.rs  mod.rs  output_storage.rs  power_save_mode.rs  processing.rs  recorder_mode.rs
src/workmodes/high_performance_mode/: clock_config_12.rs  clock_config_24.rs  clock_config_72.rs
src/workmodes/processing/: common.rs  high_performance.rs  recorder_processor.rs
test/: lib_usb_self_writer.py  pb_reader.py  pytest_lib_usb_self_writer.py  readme.md
