[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "stm32-usb-self-writer"
version = "0.2.0"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false, features = ["alloc"] }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
static_assertions = "1.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vcell = "0.1.3"
#bstr = { version = "0.2", default-features = false, features = ["unicode"] }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.6.11" # need by stm32l4 == 0.13.0

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

strum = {version = "0.23.0", default-features = false, features = ["derive"] }

usb-device = "0.2.7"
stm32-usbd = "0.6.0"
usbd-serial = { path = "lib/usbd-serial" }
usbd_scsi = { path = "lib/stm32-usb.rs/firmware/usbd_scsi", features = ["no-zlp"] }
usbd_mass_storage = "0.1.0"

# defmt
defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2", features = ["print-defmt"] }

stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal.git", features = ["rt", "unproven", "stm32-usbd"] }
freertos-rust = { git = "https://github.com/lobaro/FreeRTOS-rust.git" }

self-recorder-packet = { git = "https://github.com/ololoshka2871/self-recorder-packet.git",  default-features = false }

heatshrink-rust = { path = "lib/heatshrink.rs/heatshrink-rust" }
heatshrink-rust-macro = { path = "lib/heatshrink.rs/heatshrink-rust-macro" }
emfat-rust = { path = "lib/emfat" }
flash-settings-rs = { path = "lib/flash-settings.rs" }
my-proc-macro = { path = "lib/my-proc-macro" }

prost = { version = "0.9", default-features = false, features = ["prost-derive"] }

[build-dependencies]
cc = "1.0.52"
freertos-cargo-build = "0.1.1"
prost-build = "0.9"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
lto = false
panic = "abort"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
panic = 'abort'
lto = true # better optimizations

[features]
default = [
  "stm32l433",
  "freqmeter-start-stop", # При временах измерения <= 100 мс только этот режим адекватно работает
  "defmt-debug", # отключить когда собираешь релиз
  "monitor-heap",
  "monitor-output", # В режиме самописца данных там нет
  #"led-blink ",
  #"monitor",
]

monitor-heap = ["monitor"]
monitor-output = ["monitor"]
stm32l433 = [ "stm32l4xx-hal/stm32l433" ]
monitor = []
freqmeter-start-stop = []
led-blink = []

 # do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
