[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "opal-rust"
version = "0.0.1"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false, features = ["alloc"] }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }
static_assertions = "1.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
vcell = "0.1.3"
libm = "0.2.5"
#bitflags = "1.0.4"
#bstr = { version = "0.2", default-features = false, features = ["unicode"] }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7" # need by stm32l4xx-hal rev == e4835469a38b844865a6d5eef91542bdc6822941

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

usb-device = "0.2.8"
stm32-usbd = "0.6.0"
usbd-serial = { path = "lib/usbd-serial" }

# defmt
defmt = "0.2"
defmt-rtt = "0.2"
panic-probe = { version = "0.2", features = ["print-defmt"] }

stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal.git", features = ["rt", "unproven", "stm32-usbd"], tag = "v0.7.1" }

freertos-rust = { git = "https://github.com/lobaro/FreeRTOS-rust.git" }

[build-dependencies]
cc = "1.0.52"
freertos-cargo-build = "0.1.1"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = false # Делает только хуже

[features]
default = [
  "stm32l433",
  "defmt-debug",
  "monitor-heap",
]

monitor-heap = ["monitor"]
stm32l433 = ["stm32l4xx-hal/stm32l433"]
monitor = []
led-blink = []

# base clocking
clock-base-24Mhz = []

# defmt: do NOT modify these features
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
