[package]
authors = ["ololoshka2871"]
edition = "2018"
name = "qspi-stm32lx3"
version = "0.1.0"

[dependencies]
vcell = "0.1.3"
cortex-m = "0.7.3"
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal.git", features = ["rt"], rev = "e4835469a38b844865a6d5eef91542bdc6822941" }

[features]
stm32l433 = ["stm32l4xx-hal/stm32l433"]
stm32l443 = ["stm32l4xx-hal/stm32l443"]